<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <ImageButton
        android:id="@+id/ib_edit_event"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_edit"
        android:backgroundTint="@color/colorPrimaryLight"
        android:elevation="5dp"
        android:scaleX="2"
        android:scaleY="2"
        app2:layout_constraintRight_toRightOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />
    <ImageButton
        android:id="@+id/ib_cancel_event"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/colorPrimaryLight"
        android:elevation="5dp"
        android:scaleX="2"
        android:scaleY="2"
        app2:layout_constraintTop_toBottomOf="@+id/ib_edit_event"
        app2:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <ImageButton
        android:id="@+id/ib_delete_event"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_delete"
        android:backgroundTint="@color/colorPrimaryLight"
        android:elevation="5dp"
        android:scaleX="2"
        android:scaleY="2"
        app2:layout_constraintLeft_toLeftOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintLeft_toLeftOf="parent"
        app2:layout_constraintRight_toRightOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_upper_header_detail"
            style="@style/UpperHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/schedule_upper_header"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tv_lower_header_detail"
            style="@style/LowerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryMid"
            android:elevation="2dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/schedule_lower_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/add_event_time_label" />

                <TextView
                    android:id="@+id/tv_detail_start_time"
                    style="@style/LowerHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_event_time" />

                <TextView
                    android:id="@+id/tv_detail_time_divider"
                    style="@style/SubDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/add_event_time_to_divider" />

                <TextView
                    android:id="@+id/tv_detail_end_time"
                    style="@style/LowerHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_event_time" />

                <TextView
                    style="@style/SubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/add_event_title_label" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    style="@style/SubDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:text="@string/add_event_title_data" />

                <TextView
                    style="@style/SubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/add_event_description_label" />

                <TextView
                    android:id="@+id/tv_detail_description"
                    style="@style/SubDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:text="@string/add_event_description_data" />

                <TextView
                    style="@style/SubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/add_event_alarm_time_label" />

                <TextView
                    android:id="@+id/tv_detail_alarm_time"
                    style="@style/LowerHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_event_time" />

                <TextView
                    android:id="@+id/tv_detail_alarm_date"
                    style="@style/SubDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/event_detail_alarm_date" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
