<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <ImageButton
        android:id="@+id/ib_confirm_event"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_confirm"
        android:backgroundTint="@color/colorPrimaryLight"
        android:elevation="5dp"
        android:scaleX="2"
        android:scaleY="2"
        app2:layout_constraintRight_toRightOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/ib_cancel_event"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/colorPrimaryLight"
        android:elevation="5dp"
        android:scaleX="2"
        android:scaleY="2"
        app2:layout_constraintTop_toBottomOf="@id/ib_confirm_event"
        app2:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintHorizontal_bias="0.0"
        app2:layout_constraintLeft_toLeftOf="parent"
        app2:layout_constraintRight_toRightOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_upper_header_edit"
            style="@style/UpperHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/schedule_upper_header"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tv_lower_header_edit"
            style="@style/LowerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryMid"
            android:elevation="2dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/schedule_lower_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubHeader"
                    android:text="@string/add_event_time_label"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/et_time_text_edit_hour"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/LowerHeader"
                        android:text="@string/add_event_time_data_divider"/>

                    <EditText
                        android:id="@+id/et_time_text_edit_minute"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>

                    <EditText
                        android:id="@+id/et_time_text_edit_meridian"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_meridian_placeholder_hint" />
                </LinearLayout>
                <TextView
                    android:paddingTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubHeader"
                    android:text="@string/add_event_time_to_divider"/>
                <LinearLayout
                    android:paddingTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/et_time_text_edit_hour_end"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/LowerHeader"
                        android:text="@string/add_event_time_data_divider"/>

                    <EditText
                        android:id="@+id/et_time_text_edit_minute_end"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>

                    <EditText
                        android:id="@+id/et_time_text_edit_meridian_end"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_meridian_placeholder_hint" />
                </LinearLayout>

                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubHeader"
                    android:text="@string/add_event_title_label"/>
                <EditText
                    android:id="@+id/et_title_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubDetail"
                    android:textColorHint="@color/colorPrimaryMid"
                    android:hint="@string/add_event_title_data"
                    android:background="@color/colorPrimaryMidlow"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"/>

                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubHeader"
                    android:text="@string/add_event_description_label"/>
                <EditText
                    android:id="@+id/et_description_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubDetail"
                    android:textColorHint="@color/colorPrimaryMid"
                    android:hint="@string/add_event_description_data"
                    android:background="@color/colorPrimaryMidlow"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"/>

                <TextView
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SubHeader"
                    android:text="@string/add_event_alarm_offset_label"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <EditText
                        android:id="@+id/et_time_text_edit_hour_alarm"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>
                    <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/LowerHeader"
                        android:text="@string/add_event_time_data_divider"/>
                    <EditText
                        android:id="@+id/et_time_text_edit_minute_alarm"
                        style="@style/LowerHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@color/colorPrimaryMidlow"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimaryMid"
                        android:hint="@string/time_placeholder_hint"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

